--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     })
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.android.support:appcompat-v7:27.1.0'
-    // TODO (1): Add Google Mobile Vision Library dependency
+    // COMPLETED (1): Add Google Mobile Vision Library dependency
+    implementation 'com.google.android.gms:play-services-vision:15.0.2'
+
     testImplementation 'junit:junit:4.12'
 }
