--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-vision:15.0.2'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    // TODO (1): Add Timber dependency
+    // COMPLETED (1): Add Timber dependency
+    implementation 'com.jakewharton.timber:timber:4.7.0'
+
     testImplementation 'junit:junit:4.12'
 }
